k8s/templates/backend/backend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
spec:
  podSelector:
    matchLabels:
      io.kompose.network/backend: "true"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/backend: "true"
  egress:
    - to:
        - podSelector:
            matchLabels:
              io.kompose.network/backend: "true"
    - to:
        - namespaceSelector: { }
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
